--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_URL=http://localhost:8000
 DB_DRIVER=pgsql
 
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_NAME=maxit
 DB_USER=postgres
@@ -12,3 +12,4 @@ DB_PASSWORD=rama
 
 # sudo apt-get install php-pgsql
 # sudo systemctl restart apache2
+DSN_POSTGRES=pgsql:host=127.0.0.1;port=5432;dbname=maxit;
