--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-APP_URL=http://localhost:8000
+# APP_URL=http://localhost:8000
 # CONNECTION  WITH  THE DATABASE POSTGRES
 # DB_NAME_POSTGRES=daffdb
 DB_USER_POSTGRES=postgres
-DB_PASS_POSTGRES=rama
-DB_HOST_POSTGRES=127.0.0.1
-DB_PORT_POSTGRES=5432
+DB_PASS_POSTGRES=qIYxSUkXYhWdzpORswiEreFPlqNoXPfc
+DB_HOST_POSTGRES=centerbeam.proxy.rlwy.net
+DB_PORT_POSTGRES=13388
 
 
-DB_NAME= maxit
+DB_NAME= railway
 
 
 # DB_DSN_POSTGRES=pgsql:host=127.0.0.1;dbname=mrsfall;port=5432
@@ -16,19 +16,19 @@ DB_NAME= maxit
 # CONNECTION  WITH  THE DATABASE MYSQL
 
 # DB_NAME_MYSQL=doyen
-DB_USER_MYSQL=root
-DB_PASS_MYSQL=212577@ac
-DB_HOST_MYSQL=127.0.0.1
-DB_PORT_MYSQL=3306
+# DB_USER_MYSQL=root
+# DB_PASS_MYSQL=212577@ac
+# DB_HOST_MYSQL=127.0.0.1
+# DB_PORT_MYSQL=3306
 
 # DB_DSN_MYSQL=mysql:host=127.0.0.1;dbname=mrsfall;port=3306
 
 #  NAME OF DATABASE  TO CREATE 
 # DB_DRIVER=mysql
 DB_DRIVER=pgsql
-API_URL=url_de_appdaf
-
+# API_URL=url_de_appdaf
+# postgresql://postgres:qIYxSUkXYhWdzpORswiEreFPlqNoXPfc@centerbeam.proxy.rlwy.net:13388/railway
 
 #base 
-BASE_DSN_MYSQl=mysql:host=127.0.0.1;port=3306
-BASE_DSN_POSTGRES=pgsql:host=127.0.0.1;port=5432
+# BASE_DSN_MYSQl=mysql:host=127.0.0.1;port=3306
+BASE_DSN_POSTGRES=pgsql:host=centerbeam.proxy.rlwy.net;port=13388
